--- a/foodiebudgettools/package.json
+++ b/foodiebudgettools/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "@googlemaps/js-api-loader": "^1.11.3",
+    "@iconify/icons-mdi": "^1.1.13",
+    "@iconify/react": "^1.1.4",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.1",
