--- a/foodiebudgettools/server/package.json
+++ b/foodiebudgettools/server/package.json
@@ -13,6 +13,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "mongodb": "^3.6.5",
-    "mongoose": "^5.12.2"
+    "mongoose": "^5.12.2",
+    "yelp-fusion": "^3.0.0"
   }
 }
