--- a/foodiebudgettools/package.json
+++ b/foodiebudgettools/package.json
@@ -2,6 +2,7 @@
   "name": "foodiebudgettools",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:3939",
   "dependencies": {
     "@googlemaps/js-api-loader": "^1.11.3",
     "@iconify/icons-mdi": "^1.1.13",
@@ -9,7 +10,6 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.1",
-    "axios": "^0.21.1",
     "express": "^4.17.1",
     "google-map-react": "^2.1.9",
     "react": "^17.0.1",
