--- a/foodiebudgettools/package.json
+++ b/foodiebudgettools/package.json
@@ -9,6 +9,7 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.1",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "google-map-react": "^2.1.9",
     "react": "^17.0.1",
