--- a/socket.io-react-hooks-chat/package.json
+++ b/socket.io-react-hooks-chat/package.json
@@ -1,19 +1,15 @@
 {
-  "name": "client",
+  "name": "socket.io-react-hooks-chat",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.11.9",
-    "@testing-library/react": "^11.2.5",
+    "@testing-library/jest-dom": "^5.12.0",
+    "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
-    "bootstrap": "^4.6.0",
-    "react": "^17.0.1",
-    "react-bootstrap": "^1.5.2",
-    "react-dom": "^17.0.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
-    "socket.io": "^4.0.1",
-    "socket.io-client": "^4.0.1",
-    "uuid": "^8.3.2",
+    "server": "^1.0.32",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
