--- a/socket.io-react-hooks-chat/package.json
+++ b/socket.io-react-hooks-chat/package.json
@@ -10,6 +10,7 @@
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "server": "^1.0.32",
+    "socket.io": "^4.0.1",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
