--- a/chatroom/firebase.json
+++ b/chatroom/firebase.json
@@ -7,11 +7,18 @@
     "indexes": "firestore.indexes.json"
   },
   "hosting": {
+    "site": "chatroom-60825",
     "public": "public",
     "ignore": [
       "firebase.json",
       "**/.*",
       "**/node_modules/**"
+    ],
+    "rewrites": [
+      {
+        "source": "**",
+        "destination": "/index.html"
+      }
     ]
   }
 }
