--- a/chatroom/functions/package.json
+++ b/chatroom/functions/package.json
@@ -13,6 +13,7 @@
   },
   "main": "index.js",
   "dependencies": {
+    "bad-words": "^3.0.4",
     "firebase-admin": "^9.2.0",
     "firebase-functions": "^3.11.0"
   },
