--- a/foodiebudgettools/package.json
+++ b/foodiebudgettools/package.json
@@ -10,6 +10,7 @@
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.1",
     "axios": "^0.21.1",
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "google-map-react": "^2.1.9",
     "react": "^17.0.1",
