--- a/foodiebudgettools/package.json
+++ b/foodiebudgettools/package.json
@@ -18,6 +18,8 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.0",
+    "firebase": "^8.4.3",
+    "react-firebase-hooks": "^3.0.4",
     "yelp-fusion": "^3.0.0"
   },
   "scripts": {
