--- a/foodiebudgettools/package.json
+++ b/foodiebudgettools/package.json
@@ -23,7 +23,7 @@
     "yelp-fusion": "^3.0.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "node index.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
